fix(app): according to pmd fix minor java code optimisation