@@ -13,7 +13,6 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.acrho.acrho_client.service.DateUtils;
-import org.apache.log4j.Logger;
 import org.jsoup.select.Elements;
 
 public class ResultDetails {
@@ -29,37 +28,33 @@ public class ResultDetails {
 	private String category;
 	private Long idRunner;
 	
-	private static final Logger log = Logger.getLogger(ResultDetails.class);
-	
-	private static Pattern p = Pattern.compile(PATTERN_SELECT_ID_RUNNER);
+	private static Pattern pattern = Pattern.compile(PATTERN_SELECT_ID_RUNNER);
 	
 	public ResultDetails(Elements tds) {
-		Integer position = Integer.parseInt(tds.get(0).text());
-		String name = tds.get(1).text().replaceAll(NBSP, EMPTY_STRING);
-		String urlProfil = tds.get(1).getElementsByTag(A.toString()).get(0).attr(HREF.toString());
-		String team = tds.get(2).text();
-		Long time = DateUtils.getMillis(tds.get(3).text());
-		Long avg = DateUtils.getMillis(tds.get(4).text());
-		BigDecimal speed = new BigDecimal(tds.get(5).text().replaceAll(COMA, POINT));
-		Integer points = new Integer(tds.get(6).text());
-		String category = tds.get(7).text();
+		final Integer position = Integer.parseInt(tds.get(0).text());
+		final String name = tds.get(1).text().replaceAll(NBSP, EMPTY_STRING);
+		final String urlProfil = tds.get(1).getElementsByTag(A.toString()).get(0).attr(HREF.toString());
+		final String team = tds.get(2).text();
+		final Long time = DateUtils.getMillis(tds.get(3).text());
+		final Long avg = DateUtils.getMillis(tds.get(4).text());
+		final BigDecimal speed = new BigDecimal(tds.get(5).text().replaceAll(COMA, POINT));
+		final Integer points = Integer.valueOf(tds.get(6).text());
+		final String category = tds.get(7).text();
 
-		setAvg(avg);
-		setCategory(category);
-		setName(name);
-		setPoints(points);
-		setPosition(position);
-		setSpeed(speed);
-		setTeam(team);
-		setTime(time);
-		setUrlProfil(urlProfil);
+		this.avg = avg;
+		this.category = category;
+		this.name = name;
+		this.points = points;
+		this.position = position;
+		this.speed = speed;
+		this.team = team;
+		this.time = time;
+		this.urlProfil = urlProfil;
 
-		Matcher m = p.matcher(urlProfil);
+		Matcher m = pattern.matcher(urlProfil);
 		if (m.matches()) {
-			setIdRunner(Long.valueOf(m.group(1)));
+			this.idRunner = Long.valueOf(m.group(1));
 		}
-
-		log.debug(toString());
 	}
 	public Integer getPosition() {
 		return position;
